Archive2/d2/a9e5fb8ec723d6/output
main.cpp:1:37: error: variable or field 'log' declared void
     template< typename F > void log(ChannelColors destinationChannel, F message_creator)
                                     ^
main.cpp:1:37: error: 'ChannelColors' was not declared in this scope
main.cpp:1:73: error: expected primary-expression before 'message_creator'
     template< typename F > void log(ChannelColors destinationChannel, F message_creator)
                                                                         ^
